SERVER-52906 Applying metadata update before dispatching rollback task in moveChunk