jstests/sharding/migration_waits_for_majority_commit.js
@@ -28,7 +28,7 @@ assert.commandWorked(st.s.adminCommand(
 assert.eq(1, testDB.foo.find().readConcern("majority").itcount());
 
 // Advance a migration to the beginning of the cloning phase.
-pauseMigrateAtStep(st.rs1.getPrimary(), 2);
+pauseMigrateAtStep(st.rs1.getPrimary(), migrateStepNames.deletedPriorDataInRange);
 
 // For startParallelOps to write its state
 let staticMongod = MongoRunner.runMongod({});
@@ -43,7 +43,7 @@ let awaitMigration = moveChunkParallel(staticMongod,
 
 // Wait for the migration to reach the failpoint and allow any writes to become majority committed
 // before pausing replication.
-waitForMigrateStep(st.rs1.getPrimary(), 2);
+waitForMigrateStep(st.rs1.getPrimary(), migrateStepNames.deletedPriorDataInRange);
 st.rs1.awaitLastOpCommitted();
 
 // Disable replication on the recipient shard's secondary node, so the recipient shard's majority
@@ -52,7 +52,7 @@ const destinationSec = st.rs1.getSecondary();
 stopServerReplication(destinationSec);
 
 // Allow the migration to begin cloning.
-unpauseMigrateAtStep(st.rs1.getPrimary(), 2);
+unpauseMigrateAtStep(st.rs1.getPrimary(), migrateStepNames.deletedPriorDataInRange);
 
 // Check the migration coordinator document, because the moveChunk command itself
 // will hang on trying to remove the recipient's range deletion entry with majority writeConcern
